--- a/html/index.html
+++ b/html/index.html
@@ -10,28 +10,28 @@
 <body id='home'>
     <h1>Third Age API</h1>
     <article id='all'>
-    <a href='https://third-age-api.herokuapp.com/getAllProducts'>
+    <a href='https://third-age-api.herokuapp.com/getAllProducts/'>
             <h5>Get All Books</h5>
             get all the books from the db<br>
             '/getAllProducts'
         </a>
     </article>
     <article id='byprice'>
-        <a href='https://third-age-api.herokuapp.com/getProductUnderPrice'>
+        <a href='https://third-age-api.herokuapp.com/getProductUnderPrice/'>
             <h5>Get Books By Price</h5>
             get all the books under specified price <br>from the db<br>
             '/getProductUnderPrice/highestPrice'
         </a>
     </article>
     <article id='byid'>
-        <a href='https://third-age-api.herokuapp.com/getProductByAuthor'>
+        <a href='https://third-age-api.herokuapp.com/getProductByAuthor/'>
             <h5>Get Books By Author</h5>
             get all Author books from the db
             '/getProductByAuthor/author'
         </a>
     </article>
     <article id='bypriceandauthor'>
-        <a href='https://third-age-api.herokuapp.com/getProductByPriceAndAuthor/<max_price>/<author>'>
+        <a href='https://third-age-api.herokuapp.com/getProductByPriceAndAuthor/<max_price>/<author>/'>
             <h5>Get Books By Price And Author</h5>
             get all books under specified price and <br>by a certain author from the db
             '/getProductByPriceAndAuthor/highestPrice/author'
